Closed Bug 1635684 Opened 5 years ago Closed 5 years ago

[MIPS] Failed to build js on mips64 (error: no matching member function for call to 'bailoutTest32')

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux mips64; rv:68.0) Gecko/20100101 Firefox/68.0

Steps to reproduce:

Try to build js on mips64 platform, changeset: 385f49adaf00.

Actual results:

Got error message:

/home/loongson/disk/firefox-central/js/src/jit/CodeGenerator.cpp:4572:3: error: no matching member function for call to 'bailoutTest32'
bailoutTest32(Assembler::Zero, Address(str, JSString::offsetOfFlags()),
^~~~~~~~~~~~~
/home/loongson/disk/firefox-central/js/src/jit/mips-shared/CodeGenerator-mips-shared.h:51:8: note: candidate function template not viable: no known conversion from 'js::jit::Address' to 'js::jit::Register' for 2nd argument
void bailoutTest32(Assembler::Condition c, Register lhs, T rhs,
^
1 error generated.

Expected results:

Build js successfully.

This bug seems to be introduced at changeset 687246f618fb:

+  bailoutTest32(Assembler::Zero, Address(str, JSString::offsetOfFlags()),
+                Imm32(JSString::NON_ATOM_BIT), guard->snapshot());

Becuase bailoutTest32 on mips only accept Register type value as second argument:

template <typename T>
void bailoutTest32(Assembler::Condition c, Register lhs, T rhs,
                   LSnapshot* snapshot) {
...
}
Assignee: nobody → zhaojiazhong-hf
Pushed by ccoroiu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7aa7584b8e0e [MIPS] Change bailoutTest32's second parameter to generic type. r=lth
Severity: normal → N/A
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P5
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: