Bug 1635684 - [MIPS] Change bailoutTest32's second parameter to generic type. r=lth

Differential Revision: https://phabricator.services.mozilla.com/D74013